--- a/static/hw/hw-06.Rmd
+++ b/static/hw/hw-06.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Lista de Exercícios 6"
-date: "Entrega: **21/05/2018** via Moodle (até as 23:55)"
+date: "Entrega: **27/02/2021** via Moodle (até as 23:59)"
 output: 
   html_document: 
     css: hw.css
@@ -12,7 +12,8 @@ output:
 
 ## 
 
-Você irá entregar essa lista de exercício no Moodle da disciplina. Você deverá submeter o **arquivo pdf gerado automaticamente pelo R** usando *markdown*. Não serão aceitos arquivos em outro formato!
+Você irá entregar essa lista de exercício no Moodle da disciplina. Você deverá submeter preferencialmente o **arquivo pdf gerado automaticamente pelo R** usando *markdown*. 
+<!-- Não serão aceitos arquivos em outro formato! -->
 <br><br>
 
 <span style="font-size:larger">**Suposição:**</span>
@@ -59,11 +60,11 @@ Você irá entregar essa lista de exercício no Moodle da disciplina. Você deve
     2) Utilizando a sua amostra de tempos de vida futuro, estime a probabilidade de que um indivíduo de 25 anos sobreviva até os 60 anos. Compare esse valor com a probabilidade teórica obtida pela tabela de vida.
   
 
-8) Um segurado de 65 anos quer contratar uma anuidade antecipada, anual e vitalícia de \$1.000. Encontre o menor prêmio único que a seguradora pode cobrar para garantir que a probabilidade de perda negativa não seja maior do que 25\%.
+8) Um segurado de 65 anos quer contratar uma anuidade antecipada, anual e vitalícia de \$1.000. Encontre o menor prêmio único que a seguradora pode cobrar para garantir que a probabilidade de perda positiva não seja maior do que 25\%.
 
 
-## Resolução
+<!-- ## Resolução -->
 
-Sugestão de respostas: [Resolução Lista 6](./resolucao/lista-06-resolucao.html)
+<!-- Sugestão de respostas: [Resolução Lista 6](./resolucao/lista-06-resolucao.html) -->
 
 
